--- a/template/sass/style.scss
+++ b/template/sass/style.scss
@@ -14,6 +14,7 @@
 @import url(../font/font-awesome-4.7.0/css/font-awesome.min.css);
 @import url(../js/libs/fluidplayer/css/fluidplayer.css);
 @import url(../js/libs/masonry/css/masonry-docs.css);
+// @import url(../js/libs/chart/chart.css);
 
 // Core
 @import './core/_variable';
@@ -57,6 +58,8 @@
 @import './page/_hoptac-nhuongquyen';
 @import './page/_thongtin-chusohuu';
 @import './page/_lienhe';
+@import './page/_dieukhoan';
+@import './page/_hoptac';
 
 
 
