--- a/template/seami-congchung-chitiet.html
+++ b/template/seami-congchung-chitiet.html
@@ -702,7 +702,7 @@
                 <div class="container">
                     <div class="class-wrapper">
                         <div class="similar-head">
-                            <p class="seami-label f-dacing main-cl f-bold">
+                            <p class="seami-label f-dancing main-cl f-bold">
                                 Tin liên quan
                             </p>
                             <h3 class="similar-title tt-40 f-normal t-uppercase mb-40 wow animate__bounceInRight">
@@ -1141,6 +1141,8 @@
     <script src="./js/libs/masonry/masonry-docs.min.js"></script>
     <script src="./js/libs/masonry/masonry.pkgd.min.js"></script>
     <script src="./js/libs/masonry/masonry.pkgd.js"></script>
+    <!-- chart -->
+    <script src="./js/libs/chart/chart.min.js"></script>
     <!-- Style -->
     <script src="./js/style.js" type="module" defer></script>
 </body>
