--- a/template/seami-congchung.html
+++ b/template/seami-congchung.html
@@ -998,6 +998,8 @@
     <script src="./js/libs/masonry/masonry-docs.min.js"></script>
     <script src="./js/libs/masonry/masonry.pkgd.min.js"></script>
     <script src="./js/libs/masonry/masonry.pkgd.js"></script>
+    <!-- chart -->
+    <script src="./js/libs/chart/chart.min.js"></script>
     <!-- Style -->
     <script src="./js/style.js" type="module" defer></script>
 </body>
