--- a/template/sass/components/__header.scss
+++ b/template/sass/components/__header.scss
@@ -4,7 +4,7 @@
     z-index: 900;
     background-color: $w-cl;
     transition: all .3s ease-in;
-    overflow: hidden;
+    // overflow: hidden;
 
     @include max-media($bk-d-1200) {
         box-shadow: 10px 10px 20px rgba($color: $b-cl, $alpha: 0.16);
